--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,19 @@ version: '3'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "pip install -r requirements.txt && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
       - '8000:8000'
+    container_name: tcf_django
+    depends_on: 
+      - db
+  db:
+    image: postgres:12.2
+    restart: always
+    container_name: tcf_db
+    environment:
+      POSTGRES_USER: tcf_django
+      POSTGRES_PASSWORD: s3kr1t
+      POSTGRES_DB: tcf_db
