--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     build: .
-    command: bash -c "pip install --upgrade -r requirements.txt && python3 manage.py makemigrations && python3 manage.py migrate && echo Starting Django Server... && python3 manage.py runserver 0.0.0.0:8000"
+    command: bash -c "pip install --upgrade -r requirements.txt && python3 manage.py makemigrations tcf_website && python3 manage.py migrate && echo Starting Django Server... && python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
