--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ psycopg2>=2.8.4
 social-auth-app-django>=3.1.0
 pandas>=1.0.3
 tqdm>=4.45.0
+django-cachalot
 # Linting
 pylint>=2.4.4
 pylint-django>=2.0.14
