--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ version: '3'
 services:
   web:
     build: .
-    command: bash -c "pip install --upgrade -r requirements.txt && python3 manage.py makemigrations tcf_website && python3 manage.py migrate && python3 manage.py invalidate_cachalot tcf_website && echo Starting Django Server... && python3 manage.py runserver 0.0.0.0:8000"
+    command: bash -c "pip install --upgrade -r requirements.txt && python3 manage.py makemigrations tcf_website && python3 manage.py migrate && python3 manage.py invalidate_cachalot tcf_website && echo Starting Django Server... && uwsgi --http :8000 --module tcf_core.wsgi"
     volumes:
       - .:/app
     ports:
+      - '8080:8080'
       - '8000:8000'
     container_name: tcf_django
     env_file:
