elastic querying works

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Dev settings
 DEBUG=1
+ES_PUBLIC_API_KEY=
+ES_COURSE_SEARCH_ENDPOINT=
+ES_INSTRUCTOR_SEARCH_ENDPOINT=
 
 # For prod settings, specify these vars:
 # DEBUG=0
