--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,15 @@ language: python
 services:
 - docker
 before_install:
-- openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv
-  -in gae-service-account.json.enc -out gae-service-account.json -d
-- envsubst < app.yaml.template > app.yaml
-- cat app.yaml
-- cp .env.example .env
-- docker build .
-- docker-compose up -d
+    - openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv-in gae-service-account.json.enc -out gae-service-account.json -d
+    - cp .env.example .env
+# - docker build .
+# - docker-compose up -d
 script:
-- docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
-- docker exec tcf_django python3 manage.py test
+    - envsubst < app.yaml.template > app.yaml
+    - ls
+# - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
+# - docker exec tcf_django python3 manage.py test
 deploy:
   provider: gae
   keyfile: gae-service-account.json
