--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
 # - docker build .
 # - docker-compose up -d
 script:
+    - echo testing...
 # - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
 # - docker exec tcf_django python3 manage.py test
 deploy:
-  skip_cleanup: true
+  cleanup: false
   provider: gae
   keyfile: gae-service-account.json
   project: thecourseforum-1585971713016
