--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Dev settings
 DEBUG=1
-ES_PUBLIC_API_KEY=
-ES_COURSE_SEARCH_ENDPOINT=
-ES_INSTRUCTOR_SEARCH_ENDPOINT=
+ES_PUBLIC_API_KEY=search-7gvgdz431agb5agermmcuvx8
+ES_COURSE_SEARCH_ENDPOINT=https://1761244fa3674318b11f8d5729ffd7a2.app-search.us-east4.gcp.elastic-cloud.com/api/as/v1/engines/uva-courses/search
+ES_INSTRUCTOR_SEARCH_ENDPOINT=https://1761244fa3674318b11f8d5729ffd7a2.app-search.us-east4.gcp.elastic-cloud.com/api/as/v1/engines/uva-instructors/search
 
 # For prod settings, specify these vars:
 # DEBUG=0
