--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ services:
 - docker
 before_install:
     - openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv -in gae-service-account.json.enc -out gae-service-account.json -d
-    - envsubst < app.yaml.template > app.yaml
     - cp .env.example .env
 # - docker build .
 # - docker-compose up -d
@@ -11,8 +10,12 @@ script:
     - echo testing...
 # - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
 # - docker exec tcf_django python3 manage.py test
+
+before_deploy:
+    - envsubst < app.yaml.template > app.yaml
+    - git add .
+
 deploy:
-  cleanup: false
   provider: gae
   keyfile: gae-service-account.json
   project: thecourseforum-1585971713016
