Temp app.yaml in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ script:
 # - docker exec tcf_django python3 manage.py test
 
 before_deploy:
-    - envsubst < app.yaml.template > app.yaml
-    - git add .
+    - envsubst < app.yaml.template > app.yaml.env
+    - cp app.yaml.env app.yaml
 
 deploy:
   provider: gae
