--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,18 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv
   -in gae-service-account.json.enc -out gae-service-account.json -d
 - cp .env.example .env
-- docker build .
-- docker-compose up -d
+# - docker build .
+# - docker-compose up -d
 script:
-- docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
-- docker exec tcf_django python3 manage.py test
-before_deploy:
-- envsubst < app.yaml.template > app.yaml.env
-- cp app.yaml.env app.yaml
-deploy:
-  provider: gae
-  keyfile: gae-service-account.json
-  project: thecourseforum-1585971713016
-  on: master
-  edge: true
+    - echo testing
+# - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
+# - docker exec tcf_django python3 manage.py test
+# before_deploy:
+# - envsubst < app.yaml.template > app.yaml.env
+# - cp app.yaml.env app.yaml
+# deploy:
+#   provider: gae
+#   keyfile: gae-service-account.json
+#   project: thecourseforum-1585971713016
+#   on: master
+#   edge: true
