--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ before_deploy:
 #   provider: gae
 #   keyfile: gae-service-account.json
 #   project: thecourseforum-1585971713016
-#   on: master
+#   on: app-engine
 #   edge: true
