Change to deploy only on master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ deploy:
   provider: gae
   keyfile: gae-service-account.json
   project: thecourseforum-1585971713016
-  on: app-engine
+  on: master
   edge: true
