Added environment variables to Travis CI and app.yaml

--- a/app.yaml.template
+++ b/app.yaml.template
@@ -32,3 +32,6 @@ env_variables:
     ES_COURSE_ENDPOINT: ${ES_COURSE_ENDPOINT}
     ES_INSTRUCTOR_ENDPOINT: ${ES_INSTRUCTOR_ENDPOINT}
     ES_API_KEY: ${ES_API_KEY}
+    ES_COURSE_DOCUMENTS_ENDPOINT: ${ES_COURSE_DOCUMENTS_ENDPOINT}
+    ES_INSTRUCTOR_DOCUMENTS_ENDPOINT: ${ES_INSTRUCTOR_DOCUMENTS_ENDPOINT}
+    ES_PRIVATE_API_KEY: ${ES_PRIVATE_API_KEY}
