Rename environment variables for ES

--- a/app.yaml.template
+++ b/app.yaml.template
@@ -29,9 +29,9 @@ env_variables:
     DB_PASSWORD: ${DB_PASSWORD}
     DB_PORT: ${DB_PORT}
     HOSTNAME: ${HOSTNAME}
-    ES_COURSE_ENDPOINT: ${ES_COURSE_ENDPOINT}
-    ES_INSTRUCTOR_ENDPOINT: ${ES_INSTRUCTOR_ENDPOINT}
-    ES_API_KEY: ${ES_API_KEY}
     ES_COURSE_DOCUMENTS_ENDPOINT: ${ES_COURSE_DOCUMENTS_ENDPOINT}
     ES_INSTRUCTOR_DOCUMENTS_ENDPOINT: ${ES_INSTRUCTOR_DOCUMENTS_ENDPOINT}
     ES_PRIVATE_API_KEY: ${ES_PRIVATE_API_KEY}
+    ES_COURSE_SEARCH_ENDPOINT: ${ES_COURSE_SEARCH_ENDPOINT}
+    ES_INSTRUCTOR_SEARCH_ENDPOINT: ${ES_INSTRUCTOR_SEARCH_ENDPOINT}
+    ES_PUBLIC_API_KEY: ${ES_PUBLIC_API_KEY}
