--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Dev settings
 DEBUG=1
 
+# Dev and Prod settings
+ES_PUBLIC_API_KEY=search-7gvgdz431agb5agermmcuvx8
+ES_COURSE_SEARCH_ENDPOINT=https://1761244fa3674318b11f8d5729ffd7a2.app-search.us-east4.gcp.elastic-cloud.com/api/as/v1/engines/uva-courses/search
+ES_INSTRUCTOR_SEARCH_ENDPOINT=https://1761244fa3674318b11f8d5729ffd7a2.app-search.us-east4.gcp.elastic-cloud.com/api/as/v1/engines/uva-instructors/search
+
 # For prod settings, specify these vars:
 # DEBUG=0
 # PUBLIC_IPV4=
@@ -9,5 +14,6 @@ DEBUG=1
 # DB_USER=
 # DB_PASSWORD=
 # DB_PORT=
-# ES_COURSE_ENDPOINT=
-# ES_API_KEY=
+# ES_COURSE_DOCUMENTS_ENDPOINT=
+# ES_INSTRUCTOR_DOCUMENTS_ENDPOINT=
+# ES_PRIVATE_API_KEY=
