--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,17 @@ pandas>=1.0.3
 tqdm>=4.45.0
 django-cachalot
 requests
+django-environ
+
 # Linting
 pylint>=2.4.4
 pylint-django>=2.0.14
 autopep8>=1.5.1
 html-linter>=0.4.0
+
 # Heroku setup
 gunicorn
 django-heroku
+
 # GAE Prod
 uwsgi
