add secrets to env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Dev settings
 DEBUG=1
+SECRET_KEY=
+SOCIAL_AUTH_GOOGLE_OAUTH2_KEY=
+SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET=
 
 # Dev and Prod settings
 ES_PUBLIC_API_KEY=search-7gvgdz431agb5agermmcuvx8
