--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-language: python
 services:
 - docker
 before_install:
+- cp .env.example .env
 - openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv
   -in gae-service-account.json.enc -out gae-service-account.json -d
 - docker build .
+- cp .env.example .env
 - docker-compose up
 before_deploy:
 - envsubst < app.yaml.template > app.yaml.env
