--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,23 @@
-language: python3
+language: python
 
 services:
-- docker
+  - docker
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv
-  -in gae-service-account.json.enc -out gae-service-account.json -d
-- envsubst < .env.travis > .env
-- docker build .
-- docker-compose up -d
+  - openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv
+    -in gae-service-account.json.enc -out gae-service-account.json -d
+  - envsubst < .env.travis > .env
+  - docker build .
+  - docker-compose up -d
+
+script:
+  - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
+  - docker exec tcf_django python3 manage.py test
 
 before_deploy:
-- envsubst < app.yaml.template > app.yaml.env
-- cp app.yaml.env app.yaml
-- docker exec tcf_django python3 manage.py collectstatic --noinput --clear
+  - envsubst < app.yaml.template > app.yaml.env
+  - cp app.yaml.env app.yaml
+  - docker exec tcf_django python3 manage.py collectstatic --noinput --clear
 
 deploy:
   provider: gae
