Maybe it needs other docker commands?

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        docker build .
+        docker-compose up
         docker exec tcf_django python3 manage.py test
