--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "[![Build Status](https://travis-ci.com/thecourseforum/theCourseForum2.svg?branch=master)](https://travis-ci.com/thecourseforum/theCourseForum2)",
   "main": "index.js",
   "dependencies": {
+    "eslint": "^7.9.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
