Install ESLint plugins locally
https://eslint.org/docs/user-guide/migrating-to-6.0.0#package-loading-simplification

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 script:
   - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
-  - docker exec tcf_django npm install -g eslint eslint-config-standard eslint-plugin-import eslint-plugin-node eslint-plugin-promise eslint-plugin-standard
+  - docker exec tcf_django npm install -g eslint
   - docker exec tcf_django eslint --fix tcf_website/static/**/*.js
   - docker exec tcf_django python3 manage.py test
 
