Use the locally installed eslint instead of the global one

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,9 @@ before_install:
   - docker build .
   - docker-compose up -d
 
-install:
-  - docker exec tcf_django npm install -g eslint
-
 script:
   - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
-  - docker exec tcf_django eslint --fix tcf_website/static/**/*.js
+  - docker exec tcf_django node_modules/.bin/eslint --fix tcf_website/static/**/*.js
   - docker exec tcf_django python3 manage.py test
 
 before_deploy:
