--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ before_install:
 
 script:
   - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
+  - docker exec tcf_django ls .
+  - docker exec tcf_django ls node_modules
+  - docker exec tcf_django ls node_modules/.bin
   - docker exec tcf_django node_modules/.bin/eslint --fix tcf_website/static/**/*.js
   - docker exec tcf_django python3 manage.py test
 
