--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,20 +15,23 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [ 3.6, 3.7, 3.8 ]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        docker build .
-        docker-compose up
-        docker exec tcf_django python3 manage.py test
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Tests
+          env:
+            TEST_SECRET: ${{secrets.TEST_SECRET}}
+        run: |
+          echo $TEST_SECRET
+          docker build .
+          docker-compose up
+          docker exec tcf_django python3 manage.py test
