--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,15 +23,19 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run Tests
-        env:
-          TEST_SECRET: ${{secrets.TEST_SECRET}}
-        run: |
-          echo $TEST_SECRET
-          docker build .
-          docker-compose up
-          docker exec tcf_django python3 manage.py test
+#      - name: Install Dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#      - name: Run Tests
+#        env:
+#          TEST_SECRET: ${{secrets.TEST_SECRET}}
+#        run: |
+#          echo $TEST_SECRET
+#          docker build .
+#          docker-compose up
+#          docker exec tcf_django python3 manage.py test
+#
+      - name: Tests
+          env:
+            TEST_SECRET: ${{secrets.TEST_SECRET}}
