--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run Tests
+      - name: Build Docker
         env:
           SECRET_KEY: ${{secrets.SECRET_KEY}}
           SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY}}
@@ -44,5 +44,6 @@ jobs:
           echo "ES_COURSE_SEARCH_ENDPOINT=$ES_COURSE_SEARCH_ENDPOINT" >> .env
           echo "ES_INSTRUCTOR_SEARCH_ENDPOINT=$ES_INSTRUCTOR_SEARCH_ENDPOINT" >> .env
           docker build .
-          docker-compose up
-          docker exec tcf_django python3 manage.py test
+          docker-compose build
+      - name: Run Tests
+          run: docker exec tcf_django python3 manage.py test
