--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
           echo "ES_COURSE_SEARCH_ENDPOINT=$ES_COURSE_SEARCH_ENDPOINT" >> .env
           echo "ES_INSTRUCTOR_SEARCH_ENDPOINT=$ES_INSTRUCTOR_SEARCH_ENDPOINT" >> .env
           docker build .
-          docker-compose build
+          docker-compose up -d
       - name: Run Tests
         run: |
           docker exec tcf_django python3 manage.py test
