--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,4 +57,4 @@ jobs:
           docker-compose up -d
       - name: Run Tests
         run: |
-          docker exec tcf_django python3 manage.py test
+          sudo docker exec tcf_django sudo python3 manage.py test
