Changing CI to dev only
Until we fix it

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,9 +4,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ dev ]
   pull_request:
-    branches: [ master ]
+    branches: [ dev ]
 
 jobs:
   build:
