set GH actions to work on test branch

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,7 @@ name: Django CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, build_fix ]
   pull_request:
     branches: [ master ]
 
