--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run Tests
+      - name: Run Tests!
         env:
           SECRET_KEY: ${{secrets.SECRET_KEY}}
           SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY}}
