--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 
 script:
   - docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
-  - docker exec tcf_django node_modules/.bin/eslint --fix tcf_website/static/**/*.js
+  - docker exec tcf_django node_modules/.bin/eslint tcf_website/static/**/*.js
   - docker exec tcf_django python3 manage.py test
 
 before_deploy:
