update travis env

--- a/.env.travis
+++ b/.env.travis
@@ -8,4 +8,4 @@ SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET=${SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET}
 ES_PUBLIC_API_KEY=${ES_PUBLIC_API_KEY}
 ES_COURSE_SEARCH_ENDPOINT=${ES_COURSE_SEARCH_ENDPOINT}
 ES_INSTRUCTOR_SEARCH_ENDPOINT=${ES_INSTRUCTOR_SEARCH_ENDPOINT}
-DISCORD_URL_BUG=https://discordapp.com/api/webhooks/770806487873224764/i86B8MXvwl-aoFkrWea6rVHg_aH-aAjWzSY1BU0iOR-K2JFewx17OBDsiR8lGRG5JJG5
+DISCORD_URL_BUG=${DISCORD_URL_BUG}
