--- a/.env.travis
+++ b/.env.travis
@@ -9,3 +9,4 @@ ES_PUBLIC_API_KEY=${ES_PUBLIC_API_KEY}
 ES_COURSE_SEARCH_ENDPOINT=${ES_COURSE_SEARCH_ENDPOINT}
 ES_INSTRUCTOR_SEARCH_ENDPOINT=${ES_INSTRUCTOR_SEARCH_ENDPOINT}
 DISCORD_URL_BUG=${DISCORD_URL_BUG}
+DISCORD_URL_FEEDBACK=${DISCORD_URL_FEEDBACK}
