--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[![Build Status](https://travis-ci.com/thecourseforum/theCourseForum2.svg?branch=master)](https://travis-ci.com/thecourseforum/theCourseForum2)",
   "main": "index.js",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "eslint": "^7.9.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
