--- a/app.yaml.template
+++ b/app.yaml.template
@@ -35,5 +35,5 @@ env_variables:
     ES_COURSE_SEARCH_ENDPOINT: ${ES_COURSE_SEARCH_ENDPOINT}
     ES_INSTRUCTOR_SEARCH_ENDPOINT: ${ES_INSTRUCTOR_SEARCH_ENDPOINT}
     ES_PUBLIC_API_KEY: ${ES_PUBLIC_API_KEY}
-    DISCORD_URL_BUG=${DISCORD_URL_BUG}
-    DISCORD_URL_FEEDBACK=${DISCORD_URL_FEEDBACK}
+    DISCORD_URL_BUG: ${DISCORD_URL_BUG}
+    DISCORD_URL_FEEDBACK: ${DISCORD_URL_FEEDBACK}
