Remove an unnecessary cp command

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ script:
   - docker exec tcf_django python3 manage.py test
 
 before_deploy:
-  - envsubst < app.yaml.template > app.yaml.env
-  - cp app.yaml.env app.yaml
+  - envsubst < app.yaml.template > app.yaml
   - docker exec tcf_django python3 manage.py collectstatic --noinput --clear
 
 deploy:
