--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_859f5568b0c8_key -iv $encrypted_859f5568b0c8_iv
     -in gae-service-account.json.enc -out gae-service-account.json -d
   - envsubst < .env.travis > .env
-  - docker build .
-  - docker-compose up -d
+  - docker-compose up -d --build
   - docker exec tcf_django npm install
 
 script:
