--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,6 +13,18 @@ jobs:
       matrix:
         python-version: [3.8]
 
+    services:
+      postgres:
+        image: postgres:12.2
+        env:
+          POSTGRES_USER: tcf_django
+          POSTGRES_PASSWORD: s3kr1t
+          POSTGRES_DB: tcf_db
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
