--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Migrations
         env:
           DEBUG: 1
-          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_HOST: '127.0.0.1'
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
