Try identifying "host name"

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,8 +45,8 @@ jobs:
         env:
           DEBUG: 1
           DB_HOST: '127.0.0.1'
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
+          DB_NAME: 'name'
+          DB_USER: 'user'
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
