--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,9 +17,9 @@ jobs:
       postgres:
         image: postgres:12.2
         env:
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: 'user2'
+          POSTGRES_PASSWORD: 'pass2'
+          POSTGRES_DB: 'name2'
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
@@ -47,7 +47,7 @@ jobs:
           DB_HOST: '127.0.0.1'
           DB_NAME: 'name'
           DB_USER: 'user'
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PASSWORD: 'pass'
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
           SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
