--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: [3.8]
 
     services:
-      tcf_db:
+      postgres:
         image: postgres:12.2
         env:
           POSTGRES_USER: tcf_django
