Add ls commands

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -53,7 +53,10 @@ jobs:
           DISCORD_URL_BUG: ${{ secrets.DISCORD_URL_BUG }}
           DISCORD_URL_FEEDBACK: ${{ secrets.DISCORD_URL_FEEDBACK }}
         run: |
-          python manage.py makemigrations && python manage.py migrate
+          ls -a tcf_website
+          ls -a tcf_website/migrations
+          python manage.py makemigrations
+          python manage.py migrate
 
       - name: Tests
         run: |
