--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -71,3 +71,10 @@ jobs:
 
       - name: Run ESLint
         run: node_modules/.bin/eslint tcf_website/static/**/*.js
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
