--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,11 @@ services:
       - ./db:/app
     image: postgres:12.2
     restart: always
-    container_name: tcf_db
+    container_name: ${DB_HOST}
+    env_file:
+     - ./.env
+    command: -p ${DB_PORT}
     environment:
-      POSTGRES_USER: tcf_django
-      POSTGRES_PASSWORD: s3kr1t
-      POSTGRES_DB: tcf_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
