--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 - docker exec tcf_django npm install
 
 script:
-- docker exec tcf_django pylint --load-plugins pylint_django tcf_website tcf_core
+- docker exec tcf_django pylint --disable=R0801 --load-plugins pylint_django tcf_website tcf_core
 - docker exec tcf_django node_modules/.bin/eslint tcf_website/static/**/*.js
 - docker exec tcf_django python3 manage.py test
 
