--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -78,3 +78,6 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
+      - name: Collect static files
+        run: python3 manage.py collectstatic --noinput --clear
