Remove the flag "disable=R0801"

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint --disable=R0801 --load-plugins pylint_django tcf_website tcf_core
+          pylint --load-plugins pylint_django tcf_website tcf_core
 
       - name: Migrations & Tests
         run: |
