Double quotes around SECRET_KEY

--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   DEBUG: 1
-  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  SECRET_KEY: "${{ secrets.SECRET_KEY }}"
   SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
   SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
   ES_PUBLIC_API_KEY: ${{ secrets.ES_PUBLIC_API_KEY }}
