--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -73,4 +73,4 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: node_modules/.bin/eslint tcf_website/static/**/*.js
+        run: node_modules/.bin/eslint tcf_website/static/**/*.js -c .config/.eslintrc.yml
