--- a/app.yaml.template
+++ b/app.yaml.template
@@ -21,19 +21,25 @@ handlers:
   secure: always
 
 env_variables:
-    # Set variables accordingly.
-    SECRET_KEY: SECRET_KEY
-    DEBUG: "${DEBUG}"
-    DB_NAME: "${DB_NAME}"
-    DB_HOST: "${DB_HOST}"
-    DB_USER: "${DB_USER}"
-    DB_PASSWORD: "${DB_PASSWORD}"
-    DB_PORT: "${DB_PORT}"
-    ES_COURSE_DOCUMENTS_ENDPOINT: "${ES_COURSE_DOCUMENTS_ENDPOINT}"
-    ES_INSTRUCTOR_DOCUMENTS_ENDPOINT: "${ES_INSTRUCTOR_DOCUMENTS_ENDPOINT}"
-    ES_PRIVATE_API_KEY: "${ES_PRIVATE_API_KEY}"
-    ES_COURSE_SEARCH_ENDPOINT: "${ES_COURSE_SEARCH_ENDPOINT}"
-    ES_INSTRUCTOR_SEARCH_ENDPOINT: "${ES_INSTRUCTOR_SEARCH_ENDPOINT}"
-    ES_PUBLIC_API_KEY: "${ES_PUBLIC_API_KEY}"
-    DISCORD_URL_BUG: "${DISCORD_URL_BUG}"
-    DISCORD_URL_FEEDBACK: "${DISCORD_URL_FEEDBACK}"
+    # Django
+    SECRET_KEY: ${SECRET_KEY}
+    DEBUG: 0
+    # database
+    DB_NAME: ${DB_NAME}
+    DB_USER: ${DB_USER}
+    DB_PASSWORD: ${DB_PASSWORD}
+    DB_HOST: ${DB_HOST}
+    DB_PORT: ${DB_PORT}
+    # social-auth-app-django
+    SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${SOCIAL_AUTH_GOOGLE_OAUTH2_KEY}
+    SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET}
+    # elasticsearch
+    ES_COURSE_DOCUMENTS_ENDPOINT: ${ES_COURSE_DOCUMENTS_ENDPOINT}
+    ES_INSTRUCTOR_DOCUMENTS_ENDPOINT: ${ES_INSTRUCTOR_DOCUMENTS_ENDPOINT}
+    ES_PRIVATE_API_KEY: ${ES_PRIVATE_API_KEY}
+    ES_COURSE_SEARCH_ENDPOINT: ${ES_COURSE_SEARCH_ENDPOINT}
+    ES_INSTRUCTOR_SEARCH_ENDPOINT: ${ES_INSTRUCTOR_SEARCH_ENDPOINT}
+    ES_PUBLIC_API_KEY: ${ES_PUBLIC_API_KEY}
+    # discord
+    DISCORD_URL_BUG: ${DISCORD_URL_BUG}
+    DISCORD_URL_FEEDBACK: ${DISCORD_URL_FEEDBACK}
