--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -5,10 +5,30 @@ on:
   pull_request:
     branches:
       - '*'
+env:
+  # Django
+  DJANGO_SETTINGS_MODULE: tcf_core.settings.ci
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  DEBUG: 1
+  # database
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  # social-auth-app-django
+  SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_KEY }}
+  SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
+  # elasticsearch
+  ES_PUBLIC_API_KEY: ${{ secrets.ES_PUBLIC_API_KEY }}
+  ES_COURSE_SEARCH_ENDPOINT: ${{ secrets.ES_COURSE_SEARCH_ENDPOINT }}
+  ES_INSTRUCTOR_SEARCH_ENDPOINT: ${{ secrets.ES_INSTRUCTOR_SEARCH_ENDPOINT }}
+  # discord
+  DISCORD_URL_BUG: ${{ secrets.DISCORD_URL_BUG }}
+  DISCORD_URL_FEEDBACK: ${{ secrets.DISCORD_URL_FEEDBACK }}
 
 jobs:
   build:
-    environment: testing_environment
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
